added demos for permissions

--- a/demoroot/notebooks/01 User Management Keycloak.ipynb
+++ b/demoroot/notebooks/01 User Management Keycloak.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 79,
    "id": "97c85d72",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "id": "25edefeb",
    "metadata": {},
    "outputs": [
@@ -651,31 +651,7 @@
      "output_type": "stream",
      "text": [
       "Response code:  200\n",
-      "Response text:  [\n",
-      "  {\n",
-      "    \"config\": {\n",
-      "      \"users\": \"[\\\"3b9ada08-7a96-4078-86fc-43c61248968e\\\"]\"\n",
-      "    },\n",
-      "    \"decisionStrategy\": \"UNANIMOUS\",\n",
-      "    \"description\": \"\",\n",
-      "    \"id\": \"57d4a363-6b40-4dec-93e9-a46a1a8e492f\",\n",
-      "    \"logic\": \"POSITIVE\",\n",
-      "    \"name\": \"admin_policy\",\n",
-      "    \"type\": \"user\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"config\": {\n",
-      "      \"code\": \"// by default, grants any permission associated with this policy\\n$evaluation.grant();\\n\"\n",
-      "    },\n",
-      "    \"decisionStrategy\": \"AFFIRMATIVE\",\n",
-      "    \"description\": \"A policy that grants access only for users within this realm\",\n",
-      "    \"id\": \"cb607685-db58-4adb-a712-ba96bfa9e164\",\n",
-      "    \"logic\": \"POSITIVE\",\n",
-      "    \"name\": \"Default Policy\",\n",
-      "    \"type\": \"js\"\n",
-      "  }\n",
-      "]\n",
-      "\n"
+      "Response text:  [{'config': {'users': '[\"3b9ada08-7a96-4078-86fc-43c61248968e\"]'}, 'decisionStrategy': 'UNANIMOUS', 'description': '', 'id': '57d4a363-6b40-4dec-93e9-a46a1a8e492f', 'logic': 'POSITIVE', 'name': 'admin_policy', 'type': 'user'}, {'config': {}, 'decisionStrategy': 'UNANIMOUS', 'description': 'despriction3', 'id': 'c838874b-f3a2-459d-90ef-8f94f565f9f1', 'logic': 'POSITIVE', 'name': 'aggregated policy 3', 'type': 'aggregate'}, {'config': {'code': '// by default, grants any permission associated with this policy\\n$evaluation.grant();\\n'}, 'decisionStrategy': 'AFFIRMATIVE', 'description': 'A policy that grants access only for users within this realm', 'id': 'cb607685-db58-4adb-a712-ba96bfa9e164', 'logic': 'POSITIVE', 'name': 'Default Policy', 'type': 'js'}, {'config': {'groups': '[{\"id\":\"782dcbe6-40d1-4ebc-9c05-0b4e0829a141\",\"extendChildren\":false}]', 'groupsClaim': 'groups claim 1'}, 'decisionStrategy': 'UNANIMOUS', 'description': '', 'id': '58797dc5-c8ad-4ea0-a06b-d34fd8de6cc5', 'logic': 'POSITIVE', 'name': 'group policy 1', 'type': 'group'}, {'config': {'clients': '[\"844967e2-15e1-4e1b-96e5-e0effc8f1737\"]'}, 'decisionStrategy': 'UNANIMOUS', 'id': '78e92563-22ec-4716-9c90-3c3fff45fa35', 'logic': 'POSITIVE', 'name': 'My Policy 2', 'type': 'client'}, {'config': {'clientScopes': '[]'}, 'decisionStrategy': 'UNANIMOUS', 'id': 'ff60132e-58fc-49a9-bb2a-376ce442b501', 'logic': 'POSITIVE', 'name': 'My Policy 3', 'type': 'client-scope'}, {'config': {'pattern': '123', 'targetClaim': 'target1'}, 'decisionStrategy': 'UNANIMOUS', 'description': 'description1', 'id': '24656f8a-7004-4b5b-95ba-3b05998458e0', 'logic': 'POSITIVE', 'name': 'regex policy 1', 'type': 'regex'}, {'config': {'roles': '[{\"id\":\"b80601c3-9e0f-40fd-a03c-34cd759bfc63\",\"required\":false}]'}, 'decisionStrategy': 'UNANIMOUS', 'id': 'a3ed3ec0-83e2-4df4-a57b-09e2b34a7a36', 'logic': 'POSITIVE', 'name': 'role policy 1', 'type': 'role'}, {'config': {'year': '2023'}, 'decisionStrategy': 'UNANIMOUS', 'description': '', 'id': 'f9031d6a-9238-413d-aade-9e1e2353820f', 'logic': 'POSITIVE', 'name': 'time policy 1', 'type': 'time'}, {'config': {'users': '[]'}, 'decisionStrategy': 'UNANIMOUS', 'description': 'descriptitirnnce222', 'id': '8e90c31f-759a-4679-86c5-56cad118f12e', 'logic': 'POSITIVE', 'name': 'user policy 12', 'type': 'user'}]\n"
      ]
     }
    ],
@@ -1066,14 +1042,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "7c9e28f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response code:  200\n"
+     ]
+    }
+   ],
    "source": [
     "policy_id = \"8e90c31f-759a-4679-86c5-56cad118f12e\"\n",
     "delete_policies_url = identity_api_url + \"/\"+ client_id +\"/policies/\" + policy_id\n",
-    "response = requests.put(delete_policies_url,json=data)\n",
+    "response = requests.put(delete_policies_url)\n",
     "print(\"Response code: \",str(response.status_code))"
    ]
   },
@@ -1082,7 +1066,216 @@
    "id": "a409a128",
    "metadata": {},
    "source": [
-    "#### Identity-API"
+    "#### Identity-API get client permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "8170b92e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response code:  200\n",
+      "Response text:  [{'decisionStrategy': 'UNANIMOUS', 'description': 'A permission that applies to the default resource type', 'id': '2193eed8-93e5-471f-bb67-a3726b333fb1', 'logic': 'POSITIVE', 'name': 'Default Permission', 'resourceType': 'urn:gatekeeper:resources:default', 'type': 'resource'}, {'decisionStrategy': 'UNANIMOUS', 'description': '', 'id': '8c16b640-f9f3-4eef-b2a0-b7812aea1c66', 'logic': 'POSITIVE', 'name': 'resource-based-permission', 'type': 'resource'}, {'decisionStrategy': 'UNANIMOUS', 'description': '', 'id': 'cbc992b4-851d-4219-af00-47192372f95b', 'logic': 'POSITIVE', 'name': 'scope-based-permission', 'type': 'scope'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_client_permissions_url = identity_api_url + \"/\"+ client_id +\"/permissions\"\n",
+    "response = requests.get(get_client_permissions_url)\n",
+    "print(\"Response code: \",str(response.status_code))\n",
+    "print(\"Response text: \",response.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f86efc5c",
+   "metadata": {},
+   "source": [
+    "#### Identity-API get client management permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "1506c963",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response code:  200\n",
+      "Response text:  {'enabled': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_management_permissions_url = identity_api_url + \"/\"+ client_id +\"/permissions/management\"\n",
+    "response = requests.get(get_management_permissions_url)\n",
+    "print(\"Response code: \",str(response.status_code))\n",
+    "print(\"Response text: \",response.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e8265ad",
+   "metadata": {},
+   "source": [
+    "#### Identity-API get client resources permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "5f12fb7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response code:  200\n",
+      "Response text:  [{'decisionStrategy': 'UNANIMOUS', 'description': 'A permission that applies to the default resource type', 'id': '2193eed8-93e5-471f-bb67-a3726b333fb1', 'logic': 'POSITIVE', 'name': 'Default Permission', 'resourceType': 'urn:gatekeeper:resources:default', 'type': 'resource'}, {'decisionStrategy': 'UNANIMOUS', 'description': '', 'id': '8c16b640-f9f3-4eef-b2a0-b7812aea1c66', 'logic': 'POSITIVE', 'name': 'resource-based-permission', 'type': 'resource'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_resources_permissions_url = identity_api_url + \"/\"+ client_id +\"/permissions/resources\"\n",
+    "response = requests.get(get_resources_permissions_url)\n",
+    "print(\"Response code: \",str(response.status_code))\n",
+    "print(\"Response text: \",response.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3da4aa8c",
+   "metadata": {},
+   "source": [
+    "#### Identity-API create client resources permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "84ddd1e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response code:  200\n",
+      "Response text:  [{'decisionStrategy': 'UNANIMOUS', 'description': 'A permission that applies to the default resource type', 'id': '2193eed8-93e5-471f-bb67-a3726b333fb1', 'logic': 'POSITIVE', 'name': 'Default Permission', 'resourceType': 'urn:gatekeeper:resources:default', 'type': 'resource'}, {'decisionStrategy': 'UNANIMOUS', 'description': '', 'id': '8c16b640-f9f3-4eef-b2a0-b7812aea1c66', 'logic': 'POSITIVE', 'name': 'resource-based-permission', 'type': 'resource'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_resources_permissions_url = identity_api_url + \"/\"+ client_id +\"/permissions/resources\"\n",
+    "data={\n",
+    "        \"type\": \"resource\",\n",
+    "        \"logic\": \"POSITIVE\",\n",
+    "        \"decisionStrategy\": \"UNANIMOUS\",\n",
+    "        \"name\": \"Permission-Name 2\",\n",
+    "        \"resources\": [\n",
+    "            \"5bd655ec-2575-406e-aa08-28b1bd25f476\"\n",
+    "        ],\n",
+    "        \"policies\": [\n",
+    "            \"57d4a363-6b40-4dec-93e9-a46a1a8e492f\"\n",
+    "        ]\n",
+    "}\n",
+    "response = requests.get(get_resources_permissions_url,json=data)\n",
+    "print(\"Response code: \",str(response.status_code))\n",
+    "print(\"Response text: \",response.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "528329d9",
+   "metadata": {},
+   "source": [
+    "#### Identity-API update client management permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "cc420361",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response code:  200\n",
+      "Response text:  {'enabled': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "update_management_permissions_url = identity_api_url + \"/\"+ client_id +\"/permissions/management\"\n",
+    "data={\n",
+    "    \"enabled\": False\n",
+    "}\n",
+    "response = requests.put(update_management_permissions_url,json=data)\n",
+    "print(\"Response code: \",str(response.status_code))\n",
+    "print(\"Response text: \",response.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "572dd8f5",
+   "metadata": {},
+   "source": [
+    "#### Identity-API update client resources permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "021f9f4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response code:  200\n"
+     ]
+    },
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m/home/flrr/eoepca/demo/demoroot/notebooks/01 User Management Keycloak.ipynb Cell 78\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/flrr/eoepca/demo/demoroot/notebooks/01%20User%20Management%20Keycloak.ipynb#Y145sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m response \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mput(update_resources_permissions_url,json\u001b[39m=\u001b[39mdata)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/flrr/eoepca/demo/demoroot/notebooks/01%20User%20Management%20Keycloak.ipynb#Y145sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mResponse code: \u001b[39m\u001b[39m\"\u001b[39m,\u001b[39mstr\u001b[39m(response\u001b[39m.\u001b[39mstatus_code))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/flrr/eoepca/demo/demoroot/notebooks/01%20User%20Management%20Keycloak.ipynb#Y145sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mResponse text: \u001b[39m\u001b[39m\"\u001b[39m,response\u001b[39m.\u001b[39;49mjson())\n",
+      "File \u001b[0;32m~/eoepca/.venv/lib/python3.11/site-packages/requests/models.py:900\u001b[0m, in \u001b[0;36mResponse.json\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    894\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mUnicodeDecodeError\u001b[39;00m:\n\u001b[1;32m    895\u001b[0m             \u001b[39m# Wrong UTF codec detected; usually because it's not UTF-8\u001b[39;00m\n\u001b[1;32m    896\u001b[0m             \u001b[39m# but some other 8-bit codec.  This is an RFC violation,\u001b[39;00m\n\u001b[1;32m    897\u001b[0m             \u001b[39m# and the server didn't bother to tell us what codec *was*\u001b[39;00m\n\u001b[1;32m    898\u001b[0m             \u001b[39m# used.\u001b[39;00m\n\u001b[1;32m    899\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[0;32m--> 900\u001b[0m \u001b[39mreturn\u001b[39;00m complexjson\u001b[39m.\u001b[39;49mloads(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtext, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m/usr/lib/python3.11/json/__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    341\u001b[0m     s \u001b[39m=\u001b[39m s\u001b[39m.\u001b[39mdecode(detect_encoding(s), \u001b[39m'\u001b[39m\u001b[39msurrogatepass\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    343\u001b[0m \u001b[39mif\u001b[39;00m (\u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[1;32m    344\u001b[0m         parse_int \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m parse_float \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[1;32m    345\u001b[0m         parse_constant \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_pairs_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m kw):\n\u001b[0;32m--> 346\u001b[0m     \u001b[39mreturn\u001b[39;00m _default_decoder\u001b[39m.\u001b[39;49mdecode(s)\n\u001b[1;32m    347\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    348\u001b[0m     \u001b[39mcls\u001b[39m \u001b[39m=\u001b[39m JSONDecoder\n",
+      "File \u001b[0;32m/usr/lib/python3.11/json/decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    332\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecode\u001b[39m(\u001b[39mself\u001b[39m, s, _w\u001b[39m=\u001b[39mWHITESPACE\u001b[39m.\u001b[39mmatch):\n\u001b[1;32m    333\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[1;32m    334\u001b[0m \u001b[39m    containing a JSON document).\u001b[39;00m\n\u001b[1;32m    335\u001b[0m \n\u001b[1;32m    336\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 337\u001b[0m     obj, end \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mraw_decode(s, idx\u001b[39m=\u001b[39;49m_w(s, \u001b[39m0\u001b[39;49m)\u001b[39m.\u001b[39;49mend())\n\u001b[1;32m    338\u001b[0m     end \u001b[39m=\u001b[39m _w(s, end)\u001b[39m.\u001b[39mend()\n\u001b[1;32m    339\u001b[0m     \u001b[39mif\u001b[39;00m end \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(s):\n",
+      "File \u001b[0;32m/usr/lib/python3.11/json/decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    353\u001b[0m     obj, end \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscan_once(s, idx)\n\u001b[1;32m    354\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m--> 355\u001b[0m     \u001b[39mraise\u001b[39;00m JSONDecodeError(\u001b[39m\"\u001b[39m\u001b[39mExpecting value\u001b[39m\u001b[39m\"\u001b[39m, s, err\u001b[39m.\u001b[39mvalue) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    356\u001b[0m \u001b[39mreturn\u001b[39;00m obj, end\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+     ]
+    }
+   ],
+   "source": [
+    "permission_id = \"2193eed8-93e5-471f-bb67-a3726b333fb1\"\n",
+    "update_resources_permissions_url = identity_api_url + \"/\"+ client_id +\"/permissions/resources/\" + permission_id\n",
+    "data={\n",
+    "        \"decisionStrategy\": \"UNANIMOUS\",\n",
+    "        \"description\": \"A permission that applies to the default resource type 1\",\n",
+    "        \"logic\": \"POSITIVE\",\n",
+    "        \"name\": \"Default Permission\",\n",
+    "        \"resourceType\": \"urn:gatekeeper:resources:default\",\n",
+    "        \"type\": \"resource\"\n",
+    "    }\n",
+    "response = requests.put(update_resources_permissions_url,json=data)\n",
+    "print(\"Response code: \",str(response.status_code))"
    ]
   }
  ],
