feat: added script but not complete for keycloak client creation

--- a/demoroot/notebooks/01 User Management Keycloak.ipynb
+++ b/demoroot/notebooks/01 User Management Keycloak.ipynb
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "0a8cd26c",
    "metadata": {},
    "outputs": [
@@ -1379,46 +1379,49 @@
      "output_type": "stream",
      "text": [
       "200\n",
-      "[\n",
-      "  {\n",
-      "    \"_id\": \"810fd94f-4c7f-4f95-a262-c01cfaa6dc43\",\n",
-      "    \"attributes\": {},\n",
-      "    \"name\": \"resource1\",\n",
-      "    \"owner\": {\n",
-      "      \"id\": \"40473bde-0270-424a-a32b-088dd3f23c5a\",\n",
-      "      \"name\": \"dummy-service3\"\n",
+      "{\n",
+      "  \"client\": \"45963c0e-a7d0-44a6-aa0b-6098f9e02954\",\n",
+      "  \"resources\": [\n",
+      "    {\n",
+      "      \"_id\": \"ecc0a3ca-ce55-41ce-8df0-2b60eca53d84\",\n",
+      "      \"attributes\": {},\n",
+      "      \"name\": \"resource1\",\n",
+      "      \"owner\": {\n",
+      "        \"id\": \"45963c0e-a7d0-44a6-aa0b-6098f9e02954\",\n",
+      "        \"name\": \"dummy-service8\"\n",
+      "      },\n",
+      "      \"ownerManagedAccess\": false,\n",
+      "      \"scopes\": [\n",
+      "        {\n",
+      "          \"id\": \"1f9c09d0-d231-4d64-b611-fd80e237662c\",\n",
+      "          \"name\": \"access\"\n",
+      "        }\n",
+      "      ],\n",
+      "      \"uris\": [\n",
+      "        \"/resource1/*\"\n",
+      "      ]\n",
       "    },\n",
-      "    \"ownerManagedAccess\": false,\n",
-      "    \"scopes\": [\n",
-      "      {\n",
-      "        \"id\": \"5f7564d1-1479-475a-a955-08268b799aeb\",\n",
-      "        \"name\": \"access\"\n",
-      "      }\n",
-      "    ],\n",
-      "    \"uris\": [\n",
-      "      \"/resource1/*\"\n",
-      "    ]\n",
-      "  },\n",
-      "  {\n",
-      "    \"_id\": \"c352ab94-e81d-4d8d-91ff-87c590092d8c\",\n",
-      "    \"attributes\": {},\n",
-      "    \"name\": \"resource2\",\n",
-      "    \"owner\": {\n",
-      "      \"id\": \"40473bde-0270-424a-a32b-088dd3f23c5a\",\n",
-      "      \"name\": \"dummy-service3\"\n",
-      "    },\n",
-      "    \"ownerManagedAccess\": false,\n",
-      "    \"scopes\": [\n",
-      "      {\n",
-      "        \"id\": \"5f7564d1-1479-475a-a955-08268b799aeb\",\n",
-      "        \"name\": \"access\"\n",
-      "      }\n",
-      "    ],\n",
-      "    \"uris\": [\n",
-      "      \"/resource2/*\"\n",
-      "    ]\n",
-      "  }\n",
-      "]\n",
+      "    {\n",
+      "      \"_id\": \"6f49689d-0fdc-4760-9f59-b7caebcf1777\",\n",
+      "      \"attributes\": {},\n",
+      "      \"name\": \"resource2\",\n",
+      "      \"owner\": {\n",
+      "        \"id\": \"45963c0e-a7d0-44a6-aa0b-6098f9e02954\",\n",
+      "        \"name\": \"dummy-service8\"\n",
+      "      },\n",
+      "      \"ownerManagedAccess\": false,\n",
+      "      \"scopes\": [\n",
+      "        {\n",
+      "          \"id\": \"1f9c09d0-d231-4d64-b611-fd80e237662c\",\n",
+      "          \"name\": \"access\"\n",
+      "        }\n",
+      "      ],\n",
+      "      \"uris\": [\n",
+      "        \"/resource2/*\"\n",
+      "      ]\n",
+      "    }\n",
+      "  ]\n",
+      "}\n",
       "\n"
      ]
     }
@@ -1433,7 +1436,7 @@
     "create_client_url = identity_api_url + '/create-client'\n",
     "payload = {\n",
     "           \"protocol\":\"openid-connect\",\n",
-    "           \"clientId\":\"dummy-service3\",\n",
+    "           \"clientId\":\"dummy-service8\",\n",
     "           \"name\":\"\",\n",
     "           \"description\":\"\",\n",
     "           \"publicClient\":False,\n",
