--- a/demoroot/notebooks/01 User Management Keycloak.ipynb
+++ b/demoroot/notebooks/01 User Management Keycloak.ipynb
@@ -1102,7 +1102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "register_and_protect_url = identity_api_url + \"/\" + client_id +\"/register-resources\"\n",
+    "register_and_protect_url = identity_api_url + \"/\" + client_id + \"/resources\"\n",
     "data = [{\n",
     "            \"resource\":{\n",
     "                \"name\": \"resource1\",\n",
@@ -1146,7 +1146,7 @@
    "outputs": [],
    "source": [
     "resource_name = \"resource1\"\n",
-    "delete_resources_url = identity_api_url + \"/\" + client_id +\"/delete-resources/\" + resource_name\n",
+    "delete_resources_url = identity_api_url + \"/\" + client_id +\"/resources/\" + resource_name\n",
     "response = requests.delete(delete_resources_url)\n",
     "print(response.status_code)\n",
     "print(response.text)"
@@ -1167,56 +1167,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils.DemoKeycloakClient as Client\n",
-    "import jwt\n",
-    "import json\n",
     "import requests\n",
-    "from keycloak import KeycloakPostError\n",
-    "identity_api_url = 'http://localhost:5566'#\"https://identity.api.develop.eoepca.org\"\n",
-    "create_client_url = identity_api_url + '/create-client'\n",
+    "\n",
+    "identity_api_url = 'http://localhost:5566'  #\"https://identity.api.develop.eoepca.org\"\n",
+    "create_client_url = identity_api_url + '/clients'\n",
     "payload = {\n",
-    "           \"protocol\":\"openid-connect\",\n",
-    "           \"clientId\":\"dummy-service8\",\n",
-    "           \"name\":\"\",\n",
-    "           \"description\":\"\",\n",
-    "           \"publicClient\":False,\n",
-    "           \"authorizationServicesEnabled\":True,\n",
-    "           \"serviceAccountsEnabled\":True,\n",
-    "           \"implicitFlowEnabled\":False,\n",
-    "           \"directAccessGrantsEnabled\":True,\n",
-    "           \"standardFlowEnabled\":True,\n",
-    "           \"frontchannelLogout\":True,\n",
-    "           \"attributes\":{\n",
-    "               \"saml_idp_initiated_sso_url_name\":\"\",\n",
-    "               \"oauth2.device.authorization.grant.enabled\":False,\n",
-    "               \"oidc.ciba.grant.enabled\":False\n",
-    "               },\n",
-    "            \"alwaysDisplayInConsole\":False,\n",
-    "            \"rootUrl\":\"\",\n",
-    "            \"baseUrl\":\"\",\n",
-    "            \"redirectUris\":[\"*\"],\n",
-    "            \"resources\":[{\n",
-    "                \"resource\":{\n",
-    "                    \"name\": \"resource1\",\n",
-    "                    \"uris\": [\"/resource1/*\"],\n",
-    "                    \"attributes\": {},\n",
-    "                    \"resource_scopes\": [\"access\"]\n",
-    "                },\n",
-    "                \"permissions\": {\n",
-    "                    \"user\":[\"eric\"]\n",
-    "                }\n",
-    "            },\n",
-    "            {\n",
-    "                \"resource\":{\n",
-    "                    \"name\": \"resource2\",\n",
-    "                    \"uris\": [\"/resource2/*\"],\n",
-    "                    \"attributes\": {},\n",
-    "                    \"resource_scopes\": [\"access\"]\n",
-    "                },\n",
-    "                \"permissions\": {\n",
-    "                    \"user\":[\"alice\"]\n",
-    "                }\n",
-    "            }]\n",
+    "    \"clientId\": \"dummy-service\",\n",
+    "    \"name\": \"Dummy Service\",\n",
+    "    \"description\": \"Client used for Dummy service\",\n",
+    "    \"resources\": [\n",
+    "        {\n",
+    "            \"name\": \"Eric space\",\n",
+    "            \"uris\": [\"/eric/*\"],\n",
+    "            \"permissions\": {\n",
+    "                \"user\": [\"eric\"]\n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"Alice space\",\n",
+    "            \"uris\": [\"/alice/*\"],\n",
+    "            \"permissions\": {\n",
+    "                \"user\": [\"alice\"]\n",
+    "            }\n",
+    "        }\n",
+    "    ]\n",
     "}\n",
     "response = requests.post(create_client_url, json=payload)\n",
     "print(response.status_code)\n",
