Clean notebook outputs

--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5b7b02d0-18a8-43a5-b9a7-e10756cc91ec",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "00d2cc28-950f-4eb3-89ea-ef88d938e281",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6731f176-3213-4574-96b0-3d2d434f7121",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f7c27693-5eca-494e-98b4-e44ff8a2cc3f",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d25badf9-a25f-4a3f-8144-92e52155ae0e",
    "metadata": {},
    "outputs": [],
@@ -118,26 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "2b886307-8457-4c73-829a-cea903ba9a7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "insar-closure-phase-0_1_0\n",
-      "insar-closure-phase-0_2_0\n",
-      "insar-clos-wf-0_2_0\n",
-      "insar-clos-wf-0_3_0\n",
-      "DeployProcess\n",
-      "GetStatus\n",
-      "convert-url-0_1_2\n",
-      "snuggs-0_3_0\n",
-      "UndeployProcess\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Request: List Processes\n",
     "headers = { \"accept\": \"application/json\", \"Authorization\": f\"Bearer {eric_id_token}\" }\n",
@@ -165,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b989d743-f00d-41ec-bb3d-5de5324c4dd7",
    "metadata": {},
    "outputs": [],
@@ -184,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b1c2864f-c001-4354-b9ef-e0e095c9baca",
    "metadata": {},
    "outputs": [],
@@ -195,25 +179,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "59a3957d-c48c-4f7a-8dff-4083cd341883",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Request: Get Workspace Details\n",
     "headers = { \"accept\": \"application/json\", \"Authorization\": f\"Bearer {ades_rx_token}\" }\n",
-    "requests.get( workspace_api_eric_endpoint, headers=headers )"
+    "get_eric_workspace_response = requests.get( workspace_api_eric_endpoint, headers=headers ).json()\n",
+    "get_eric_workspace_response"
    ]
   },
   {
@@ -226,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "9cd1476f-b017-455c-8f78-db4144e08abe",
    "metadata": {},
    "outputs": [],
