Add UMA flow to ADES example

--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -16,6 +16,9 @@
    "outputs": [],
    "source": [
     "import requests\n",
+    "import urllib3\n",
+    "\n",
+    "urllib3.disable_warnings()\n",
     "\n",
     "domain = \"demo.eoepca.org\"\n",
     "auth_server = f\"auth.{domain}\"\n",
@@ -27,7 +30,7 @@
    "id": "0dba4523-7d24-4222-a431-0b92fcc73f52",
    "metadata": {},
    "source": [
-    "## Client (e.g. Portal)"
+    "## Client (e.g. Portal) authenticates user and calls the ADES"
    ]
   },
   {
@@ -135,7 +138,17 @@
    "id": "e43bafab-ec8d-45e7-8b06-3830d59f7343",
    "metadata": {},
    "source": [
-    "## ADES as Client"
+    "## ADES as Client calling the Workspace API\n",
+    "\n",
+    "The ADES will be called by the above client, that supplies the token to the ADES in `Authorization: Bearer` header - e.g. in execute request.\n",
+    "\n",
+    "We consider two cases...\n",
+    "1. ADES simply reuses the token received by including it in `Authorization: Bearer` header in calls it makes to the Workspace API.<br>\n",
+    "  _In this case the ADES is passive and does not act as a client of the authorization server._\n",
+    "2. ADES uses the received ID Token to follow a UMA flow between itself, the resource server (workspace API in this case) and the authorization server.<br>\n",
+    "  The outcome of this is that the ADES obtains an access token (using the ID Token), at the time it is needed.<br>\n",
+    "  _In this case the ADES is a client of the authorization server, and has associated client credentials.<br>\n",
+    "  This is effectively what is currently performed by the resource-guard (uma-user-agent+PEP) in the develop/demo EOEPCA deployments using Gluu._"
    ]
   },
   {
@@ -154,8 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ades_rx_token = eric_id_token\n",
-    "# ades_rx_token = eric_access_token"
+    "ades_rx_token = eric_id_token"
    ]
   },
   {
@@ -163,7 +175,7 @@
    "id": "143c27f5-03ac-43c2-ad7d-330a92c99479",
    "metadata": {},
    "source": [
-    "### Use RX token to call the Workspace API"
+    "### CASE 1: Use RX token to call the Workspace API"
    ]
   },
   {
@@ -174,7 +186,8 @@
    "outputs": [],
    "source": [
     "# Workspace API endpoint\n",
-    "workspace_api_eric_endpoint = f\"https://workspace-api.{domain}/workspaces/demo-user-{eric_name}\""
+    "uri_for_request = f\"/workspaces/demo-user-{eric_name}\"\n",
+    "workspace_api_eric_endpoint = f\"https://workspace-api.{domain}{uri_for_request}\""
    ]
   },
   {
@@ -195,7 +208,39 @@
    "id": "3099477e-dfc5-4b8b-8c02-d5c5d1d3a78b",
    "metadata": {},
    "source": [
-    "### Create own token via UMA Flow"
+    "### CASE 2: Create own token via UMA Flow\n",
+    "\n",
+    "The current demo cluster uses the resource-guard to protect resource servers, such as the workspace-api<br>\n",
+    "This would interfere with our ability to follow the UMA flow, since the resource-guard does this for us.\n",
+    "\n",
+    "Therefore, we have to bypass the UMA client of the resource-guard, by going directly to the PEP API that authorizes access to the workspace API.<br>\n",
+    "In this context the PEP API of the workspace-api acts as the resource server endpoint for the flow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5837a5-fa7e-455e-95dc-8fcf067a0e9a",
+   "metadata": {},
+   "source": [
+    "#### We need to use the pep API endpoint which acts on behalf of the workspace service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba44903c-68ed-47f4-973a-3fcc7160d70c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workspace_pep_api = f\"https://workspace-api-pep.{domain}/authorize\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bacb3f3d-d558-4171-a3b5-52138e851722",
+   "metadata": {},
+   "source": [
+    "#### ADES Client Credentials (different from other client)"
    ]
   },
   {
@@ -205,23 +250,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ADES Client Credentials (different from other client)\n",
     "ades_client_id = \"cf394398-5c2e-4580-a67a-6bcc2862f2d6\"\n",
     "ades_client_secret = \"70d42655-b1f1-4093-98c1-5d0fd3a23b0a\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1ce7522a-d0ce-4248-93a2-c7bd37bcba05",
+   "id": "636fc839-0141-429c-9776-d48d8d023dfb",
    "metadata": {},
    "source": [
-    "Can't demonstrate this with the current endpoints, because the resource-guard (uma-user-agent) abstracts the UMA flow, so we never see the ticket.\n",
+    "#### First we make a 'naive' request to resource with no token, ticket returned\n",
     "\n",
-    "In fact, this is exactly what the current resource-guard does - i.e. uses its own client and the provided JWT to get a new access token...\n",
-    "* calls PEP to get a permission ticket\n",
-    "* calls the Token Endpoint with permission ticket + original (received) JWT\n",
-    "* receives access token\n",
-    "* uses access token to confirm authorisation"
+    "The naive attempt is made to the resource server (workspace API) which returns a ticket in consultation with the authorization server.<br>\n",
+    "Remember that the PEP API is acting as the resource server endpoint - as our workaround the resource-guard."
    ]
   },
   {
@@ -230,7 +271,137 @@
    "id": "4cd99dd3-cadb-4db6-bd1b-472c9516b0d6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "headers = {\n",
+    "    \"content-type\": \"application/json\", \"cache-control\": \"no-cache\",\n",
+    "    \"X-Original-Uri\": uri_for_request, \"X-Original-Method\": \"GET\"\n",
+    "}\n",
+    "naive_attempt_response = requests.get(workspace_pep_api, headers=headers, verify=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e73f414-6ef4-4c68-a90a-8a24735de1b9",
+   "metadata": {},
+   "source": [
+    "The ticket is returned in the `WWW-Authenticate` header of the `401 Unauthorized` response..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9877711e-2cbf-42cf-a5f1-26ccdee0296e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if naive_attempt_response.status_code == 401:\n",
+    "    ticket = naive_attempt_response.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
+    "    print(f\"ticket: {ticket}\")\n",
+    "else:\n",
+    "    print(\"UNEXPECTED: was expecting a 401 response with a ticket\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1783adec-506d-4bfa-ac55-a846aacf7af3",
+   "metadata": {},
+   "source": [
+    "#### Then Exchange ticket for access token using the original ID Token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7499ecee-f9c9-488e-80e6-9ba537f7041b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = { \"cache-control\": \"no-cache\" }\n",
+    "data = {\n",
+    "    \"claim_token_format\": \"http://openid.net/specs/openid-connect-core-1_0.html#IDToken\",\n",
+    "    \"claim_token\": ades_rx_token,\n",
+    "    \"ticket\": ticket,\n",
+    "    \"grant_type\": \"urn:ietf:params:oauth:grant-type:uma-ticket\",\n",
+    "    \"client_id\": ades_client_id,\n",
+    "    \"client_secret\": ades_client_secret,\n",
+    "    \"scope\": \"openid\"\n",
+    "}\n",
+    "exchange_ticket_response = requests.post(token_endpoint, headers=headers, data=data).json()\n",
+    "eric_access_token_from_ticket = exchange_ticket_response[\"access_token\"]\n",
+    "eric_access_token_from_ticket"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f94393e8-20f7-4a3c-b7be-cee93fb05526",
+   "metadata": {},
+   "source": [
+    "#### Check that the new access token works\n",
+    "\n",
+    "As a quick check, we can repeat the call we made to the resource server (PEP API) - this time using the token we obtained..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46ad56b2-6578-41a1-94f6-ae4ff9244bb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    \"content-type\": \"application/json\", \"cache-control\": \"no-cache\",\n",
+    "    \"X-Original-Uri\": uri_for_request, \"X-Original-Method\": \"GET\",\n",
+    "    \"Authorization\": f\"Bearer {eric_access_token_from_ticket}\"\n",
+    "}\n",
+    "check_token_response = requests.get(workspace_pep_api, headers=headers, verify=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c220936-b0f9-427e-9804-f2b35fd829cc",
+   "metadata": {},
+   "source": [
+    "We expect a `200 OK` response this time - rather than the `401` we got with the naive attempt..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67a4bd10-9e52-4922-8c8f-d242dc0973e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_token_response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72c03011-57da-4d6f-91ec-8d1a4bb23a8a",
+   "metadata": {},
+   "source": [
+    "#### Make request to Workspace API using new token\n",
+    "\n",
+    "As an additional check, we can also use this token with the workspace-api, accessed via the resource-guard.<br>\n",
+    "In this case, by presenting the newly generated access token in the request, the resource-guard does not need to follow the UMA flow - the access token is enough.\n",
+    "\n",
+    "NOTE that, due to a quirk of the header handling in the resource-guard, we pass the access token (RPT) via a cookie alongside a bogus (`XXX`) value for the user ID token to ensure that only the RPT is used for the authorization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f543d1-bae9-4aeb-b17c-980025229263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    \"accept\": \"application/json\",\n",
+    "    \"Cookie\": f\"auth_user_id=XXX; auth_rpt-workspace-api={eric_access_token_from_ticket}\"\n",
+    "}\n",
+    "get_eric_workspace_response = requests.get( workspace_api_eric_endpoint, headers=headers )\n",
+    "print(get_eric_workspace_response)\n",
+    "get_eric_workspace_response.json()"
+   ]
   }
  ],
  "metadata": {
